@@ -187,5 +187,11 @@ namespace VisualC
             get;
             set;
         }
+
+        bool? VisualCCommon.ICommonCompilerSettings.EnableLanguageExtensions
+        {
+            get;
+            set;
+        }
     }
 }
